--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  geolocator: ^12.0.0
+  permission_handler: ^11.3.1
+
   http: ^1.2.1
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.3
