--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,18 +32,21 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+    
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Precisamos da sua localização para encontrar eventos próximos a você.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Este app precisa da sua localização para te notificar sobre eventos próximos, mesmo quando não estiver em uso.</string>
+    <key>NSLocationUsageDescription</key>
+    <string>Sua localização é usada para mostrar eventos e promoções perto de você.</string>
+
 	<key>UISupportedInterfaceOrientations</key>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Precisamos da sua localização para encontrar eventos próximos a você.</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Precisamos da sua localização para encontrar eventos próximos a você, mesmo com o app em segundo plano.</string>
-	<key>NSLocationUsageDescription</key>
-<string>Precisamos da sua localização para encontrar eventos próximos a você.</string>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
