--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+# ios/Podfile
+
 # Uncomment this line to define a global platform for your project
 platform :ios, '13.0'
 
@@ -29,15 +31,25 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
-
+  use_modular_headers! # Adicione esta linha
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  
   target 'RunnerTests' do
     inherit! :search_paths
   end
 end
 
+# --- ADIÇÃO CRÍTICA ABAIXO ---
+# Adicione todo este bloco "post_install"
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## dart: PermissionGroup.location
+        'PERMISSION_LOCATION=1',
+      ]
+    end
   end
 end
