--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,6 +40,20 @@
     <key>NSLocationUsageDescription</key>
     <string>Sua localização é usada para mostrar eventos e promoções perto de você.</string>
 
+	<key>GIDClientID</key>
+	<string>307268845441-qhrav7v8fcjtl13202q10ndfvio31q6k.apps.googleusercontent.com</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+    <dict>
+    <key>CFBundleTypeRole</key>
+    <string>Editor</string>
+    <key>CFBundleURLSchemes</key>
+    <array>
+    <string>com.googleusercontent.apps.307268845441-qhrav7v8fcjtl13202q10ndfvio31q6k</string>
+    </array>
+    </dict>
+	</array>
+
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
