--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,12 +39,13 @@ target 'Runner' do
   end
 end
 
-# --- ADIÇÃO CRÍTICA ABAIXO ---
-# Adicione todo este bloco "post_install"
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
+      # Adicione esta linha para corrigir os avisos de versão
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
         '$(inherited)',
         ## dart: PermissionGroup.location
