--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,5 +67,9 @@
         <key>NSAllowsLocalNetworking</key>
         <true/>
     </dict>
+
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
+	
     </dict>
 </plist>
