--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  image_picker: ^1.1.2 # Para selecionar imagens da galeria ou câmera
+  google_maps_flutter: ^2.7.0 # Para exibir o mapa
+  http_parser: ^4.0.2 # Auxiliar para o upload de imagens
+
+  dotted_border: ^2.1.0
+
   geolocator: ^12.0.0
   permission_handler: ^11.3.1
 
@@ -23,6 +29,7 @@ dependencies:
   intl: any
   
   # A dependência 'flutter_svg' foi removida pois não é mais necessária
+  mime: ^1.0.5
 
   cupertino_icons: ^1.0.8
 
