--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^1.2.1
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.3
+  geocoding: ^3.0.0
   intl: any
   
   # A dependência 'flutter_svg' foi removida pois não é mais necessária
