--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   geolocator: ^12.0.0
   permission_handler: ^11.3.1
   animated_bottom_navigation_bar: ^1.3.3
+  url_launcher: ^6.2.5
 
   http: ^1.2.1
   google_sign_in: ^6.2.1
